# cfp_simulator

./: .gitignore  .gitmodules  README.md
src/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt  DataTransferInterface.h  UniversalString.cpp  UniversalString.h
src/ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
src/GUI/: ActionDialog.cpp  ActionDialog.h  ActionWidget.cpp  ActionWidget.h  CMakeLists.txt  ConfigsWidget.cpp  ConfigsWidget.h  DefaultObjects.h  MainWidget.cpp  MainWidget.h  ObjectCreatorWidget.cpp  ObjectCreatorWidget.h  ObjectRowWidget.cpp  ObjectRowWidget.h  ThreadsTreeWidget.cpp  ThreadsTreeWidget.h
src/MainLogic/: CMakeLists.txt  MainLogic.cpp  MainLogic.h
src/ObjectFactory/: CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.h  Objects.cpp  Objects.h
src/WorkerThreads/: CMakeLists.txt  CustomMutex.cpp  CustomMutex.h  CustomQueue.h  WorkerThreads.cpp  WorkerThreads.h  customMutex.cpp  customMutex.h  customQueue.h
